test/FAIL/assertcmd/invalid_arguments/02_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments and to few"
#-------

assert word a